additions for the stylesheet.
//done for today

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
   
   <main>
-    <h1>Eleve seu negócio digital <strong>com um front-end de qualidade</strong></h1>
+    <h1>Eleve seu negócio digital <strong class="titulo-destaque">com um front-end de qualidade</strong></h1>
     <p>Olá! meu nome é Matheus Santana</p>
     <a href="https://br.linkedin.com/in/matheus-santana-rosa">LinkedIn</a>
     <a href="https://github.com/Msvnt">GitHub</a>
