added style to our CSS
changes to fonts
display settings using flexbox

--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 
   </header>
   
-  <main>
-    <h1>Eleve seu negócio digital <strong class="titulo-destaque">com um front-end de qualidade</strong></h1>
-    <p>Olá! meu nome é Matheus Santana</p>
-    <a href="https://br.linkedin.com/in/matheus-santana-rosa">LinkedIn</a>
-    <a href="https://github.com/Msvnt">GitHub</a>
-    <img src="imagem.png">
+  <main class="apresentacao">
+    <section class="apresentacao__conteudo">
+      <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital <strong class="titulo-destaque">com um front-end de qualidade</strong></h1>
+      <p class="apresentacao__conteudo__texto">Olá! meu nome é Matheus Santana</p>
+        <div class="apresentacao__links">
+          <a class="apresentacao__links__link" href="https://br.linkedin.com/in/matheus-santana-rosa">LinkedIn</a>
+          <a class="apresentacao__links__link" href="https://github.com/Msvnt">GitHub</a>
+        </div>
+    </section>
+  <img src="imagem.jpg" alt="Foto de matheus Santana">
 
   </main>
   
