Added new image and styles

--- a/index.html
+++ b/index.html
@@ -14,14 +14,29 @@
   
   <main class="apresentacao">
     <section class="apresentacao__conteudo">
+
       <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital <strong class="titulo-destaque">com um front-end de qualidade</strong></h1>
       <p class="apresentacao__conteudo__texto">Olá! meu nome é Matheus Santana</p>
+
         <div class="apresentacao__links">
-          <a class="apresentacao__links__link" href="https://br.linkedin.com/in/matheus-santana-rosa">LinkedIn</a>
-          <a class="apresentacao__links__link" href="https://github.com/Msvnt">GitHub</a>
+          <h2 class="apresentacao__links__subtitulo">Acesse minhas redes!</h2>
+          <a class="apresentacao__links__link" href="https://br.linkedin.com/in/matheus-santana-rosa">
+            <img src=./assets/linkedin.png>
+             LinkedIn
+          </a>
+          <a class="apresentacao__links__link" href="https://github.com/Msvnt">
+            <img src="./assets/github.png">
+            GitHub
+          </a>
+          <a class="apresentacao__links__link" href="https://instagram.com/saaant">
+            <img src="./assets/instagram.png">
+            instagram
+          </a>
         </div>
+
     </section>
-  <img src="imagem.jpg" alt="Foto de matheus Santana">
+
+  <img src="image.png" alt="Foto de matheus Santana">
 
   </main>
   
