Added new pages with styles

--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Matheus Santana!</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
-  <header>
-
+  <header class="cabecalho">
+    <nav class="cabecalho__menu">
+      <a class="cabecalho__menu__link" href="index.html">Home</a>
+      <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+      <a class="cabecalho__menu__link" href="curriculo.html">Currículo</a>
+    </nav>
   </header>
   
   <main class="apresentacao">
     <section class="apresentacao__conteudo">
 
-      <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital <strong class="titulo-destaque">com um front-end de qualidade</strong></h1>
-      <p class="apresentacao__conteudo__texto">Olá! meu nome é Matheus Santana</p>
+      <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital <strong class="titulo-destaque">com um front-end de qualidade.</strong></h1>
+      <p class="apresentacao__conteudo__texto">Olá! meu nome é Matheus Sant'Ana, estudante de Ciência da Computação, sou apaixonado por linguagens de programação e amo estudá-las. Tenho experiência com linguagens como JavaScript, HTML, CSS e Python, e estou ansioso para explorar muitas outras no futuro.</p>
 
         <div class="apresentacao__links">
           <h2 class="apresentacao__links__subtitulo">Acesse minhas redes!</h2>
@@ -36,12 +40,13 @@
 
     </section>
 
-  <img src="image.png" alt="Foto de matheus Santana">
+  <img src="./assets/image.png" alt="Foto de matheus Santana">
 
   </main>
   
-  <footer>
-
+  <footer class="rodape">
+    <p>Desenvolvido por Sant!</p>
   </footer>
+  
 </body>
 </html>
