Made some changes to adapt color better

--- a/about.html
+++ b/about.html
@@ -16,8 +16,13 @@
         </nav>
     </header>
 
-    <main>
-        <h1>Sobre mim</h1>
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Sobre mim:</h1>
+            <p class="apresentacao__conteudo__texto">Estudante de Ciência da Computação, cursando o terceiro período. Estou ansioso para encontrar minha primeira oportunidade no campo da Tecnologia da Informação (TI), e sou apaixonado por aplicar meu conhecimento teórico a desafios do mundo real. Minha base acadêmica, combinada com um forte desejo de aprender e crescer, me motiva a contribuir de maneira eficaz para projetos inovadores na indústria de TI.</p>
+            <p class="apresentacao__conteudo__texto">Além disso, sou apaixonado por linguagens de programação e amo estudá-las. Tenho experiência com linguagens como JavaScript, HTML, CSS e Python, e estou ansioso para explorar muitas outras no futuro. Acredito que a constante busca pelo conhecimento é fundamental para acompanhar o ritmo sempre evoluindo da tecnologia</p>
+        </section>
+        <img src="./assets/image.png">
     </main>
 
     <footer class="rodape">
