added some responsive changes

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 
         <div class="apresentacao__links">
           <h2 class="apresentacao__links__subtitulo">Acesse minhas redes!</h2>
-          <a class="apresentacao__links__link" href="https://br.linkedin.com/in/matheus-santana-rosa">
-            <img src=./assets/linkedin.png>
+          <a class="apresentacao__links__navegacao" href="https://br.linkedin.com/in/matheus-santana-rosa">
+          <img src=./assets/linkedin.png>
              LinkedIn
           </a>
-          <a class="apresentacao__links__link" href="https://github.com/Msvnt">
+          <a class="apresentacao__links__navegacao" href="https://github.com/Msvnt">
             <img src="./assets/github.png">
             GitHub
           </a>
-          <a class="apresentacao__links__link" href="https://instagram.com/saaant">
+          <a class="apresentacao__links__navegacao" href="https://instagram.com/saaant">
             <img src="./assets/instagram.png">
             instagram
           </a>
@@ -40,7 +40,7 @@
 
     </section>
 
-  <img src="./assets/image.png" alt="Foto de matheus Santana">
+  <img class="apresentacao_imagem" src="./assets/image.png" alt="Foto de matheus Santana">
 
   </main>
   
