--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main class="apresentacao">
     <section class="apresentacao__conteudo">
 
-      <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital <strong class="titulo-destaque">com um front-end de qualidade.</strong></h1>
+      <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital <strong class="destaque-texto">com um front-end de qualidade.</strong></h1>
       <p class="apresentacao__conteudo__texto">Olá! meu nome é Matheus Sant'Ana, estudante de Ciência da Computação, sou apaixonado por linguagens de programação e amo estudá-las. Tenho experiência com linguagens como JavaScript, HTML, CSS e Python, e estou ansioso para explorar muitas outras no futuro.</p>
 
         <div class="apresentacao__links">
