--- a/curriculo.html
+++ b/curriculo.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
     
-    <main class="apresentacao">
+    <main class="apresentacao-curriculo">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Currículo</h1>
             <p class="apresentacao__conteudo__texto">
