--- a/about.html
+++ b/about.html
@@ -26,8 +26,12 @@
     </main>
 
     <footer class="rodape">
-        <p>Desenvolvido por Sant!</p>
-    </footer>
+        <div class="Conteudo__footer">
+          <p>Desenvolvido por:</p>
+          
+        </div>
+        <img src="assets/LogoSantPng.png" class="logo__sant" alt="logo do sant">
+      </footer>
 
 
 </body>
