--- a/curriculo.html
+++ b/curriculo.html
@@ -101,8 +101,12 @@
 
    
     <footer class="rodape">
-        <p>Desenvolvido por Sant!</p>
-    </footer>
+        <div class="Conteudo__footer">
+          <p>Desenvolvido por:</p>
+          
+        </div>
+        <img src="assets/LogoSantPng.png" class="logo__sant" alt="logo do sant">
+      </footer>
 
 </body>
 </html>
