--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
   </main>
   
   <footer class="rodape">
-    <p>Desenvolvido por Sant!</p>
+    <div class="Conteudo__footer">
+      <p>Desenvolvido por:</p>
+      
+    </div>
+    <img src="assets/LogoSantPng.png" class="logo__sant" alt="logo do sant">
   </footer>
   
 </body>
