Added Projects Page

--- a/about.html
+++ b/about.html
@@ -8,13 +8,14 @@
 </head>
 
 <body>
-    <header class="cabecalho">
-        <nav class="cabecalho__menu">
-          <a class="cabecalho__menu__link" href="index.html">Home</a>
-          <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-          <a class="cabecalho__menu__link" href="curriculo.html">Currículo</a>
-        </nav>
-    </header>
+  <header class="cabecalho">
+    <nav class="cabecalho__menu">
+      <a class="cabecalho__menu__link" href="index.html">Home</a>
+      <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+      <a class="cabecalho__menu__link" href="curriculo.html">Currículo</a>
+      <a class="cabecalho__menu__link" href="projetos.html">Projetos</a>
+    </nav>
+  </header>
 
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
