--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,44 +14,49 @@
       <a class="cabecalho__menu__link" href="index.html">Home</a>
       <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
       <a class="cabecalho__menu__link" href="curriculo.html">Currículo</a>
+      <a class="cabecalho__menu__link" href="projetos.html">Projetos</a>
     </nav>
   </header>
-  
+
   <main class="apresentacao">
     <section class="apresentacao__conteudo">
 
-      <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital <strong class="destaque-texto">com um front-end de qualidade.</strong></h1>
-      <p class="apresentacao__conteudo__texto">Olá! meu nome é Matheus Sant'Ana, estudante de Ciência da Computação, sou apaixonado por linguagens de programação e amo estudá-las. Tenho experiência com linguagens como JavaScript, HTML, CSS e Python, e estou ansioso para explorar muitas outras no futuro.</p>
+      <h1 class="apresentacao__conteudo__titulo">Eai! eu sou o <strong class="destaque-texto">Matheus Sant'ana!</strong>
+      </h1>
+      <p class="apresentacao__conteudo__texto">Olá! meu nome é Matheus Sant'Ana, estudante de Ciência da Computação, sou
+        apaixonado por linguagens de programação e amo estudá-las. Tenho experiência com linguagens como JavaScript,
+        HTML, CSS e Python, e estou ansioso para explorar muitas outras no futuro.</p>
 
-        <div class="apresentacao__links">
-          <h2 class="apresentacao__links__subtitulo">Acesse minhas redes!</h2>
-          <a class="apresentacao__links__navegacao" href="https://br.linkedin.com/in/matheus-santana-rosa">
+      <div class="apresentacao__links">
+        <h2 class="apresentacao__links__subtitulo">Acesse minhas redes!</h2>
+        <a class="apresentacao__links__navegacao" href="https://br.linkedin.com/in/matheus-santana-rosa">
           <img src=./assets/linkedin.png>
-             LinkedIn
-          </a>
-          <a class="apresentacao__links__navegacao" href="https://github.com/Msvnt">
-            <img src="./assets/github.png">
-            GitHub
-          </a>
-          <a class="apresentacao__links__navegacao" href="https://instagram.com/saaant">
-            <img src="./assets/instagram.png">
-            instagram
-          </a>
-        </div>
+          LinkedIn
+        </a>
+        <a class="apresentacao__links__navegacao" href="https://github.com/Msvnt">
+          <img src="./assets/github.png">
+          GitHub
+        </a>
+        <a class="apresentacao__links__navegacao" href="https://instagram.com/saaant">
+          <img src="./assets/instagram.png">
+          instagram
+        </a>
+      </div>
 
     </section>
 
-  <img class="apresentacao_imagem" src="./assets/image.png" alt="Foto de matheus Santana">
+    <img class="apresentacao_imagem" src="./assets/image.png" alt="Foto de matheus Santana">
 
   </main>
-  
+
   <footer class="rodape">
     <div class="Conteudo__footer">
       <p>Desenvolvido por:</p>
-      
+
     </div>
     <img src="assets/LogoSantPng.png" class="logo__sant" alt="logo do sant">
   </footer>
-  
+
 </body>
+
 </html>
